re PR c++/70344 (ICE on invalid code at -O1 and above on x86_64-linux-gnu in record_reference, at cgraphbuild.c:64)

PR c++/70344

	* constexpr.c (cxx_eval_call_expression): Catch invalid recursion.

From-SVN: r234434